[package]
name = "ladfile"
version = "0.5.0"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Language Agnostic Declaration (LAD) file format for the bevy_mod_scripting crate"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "format", "json"]
categories = ["game-development", "parser-implementations"]
include = ["readme.md", "/src", "/test_assets"]
readme = "readme.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }


[features]
default = ["visitor", "testfile"]
visitor = []
testfile = []

[lints]
workspace = true
