[package]
name = "ladfile"
version = "0.6.0"
description = "Language Agnostic Declaration (LAD) file format for the bevy_mod_scripting crate"
readme = "readme.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
indexmap = { workspace = true, features = ["serde"] }


[features]
default = ["visitor", "testfile"]
visitor = []
testfile = []

[lints]
workspace = true
