[package]
name = "ladfile_builder"
version = "0.5.1"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Language Agnostic Declaration (LAD) file format for the bevy_mod_scripting crate"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "format", "json"]
categories = ["game-development", "parser-implementations"]
include = ["readme.md", "/src", "/test_assets"]
readme = "readme.md"

[dependencies]
bevy_app = { workspace = true, default-features = false, features = [] }
bevy_ecs = { workspace = true, default-features = false, features = [] }
bevy_platform = { workspace = true, default-features = false, features = [] }
bevy_log = { workspace = true, default-features = false, features = [] }
bevy_mod_scripting_core = { workspace = true }
bevy_reflect = { workspace = true, features = ["documentation"] }
ladfile = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
