[package]
name = "macro_tests"
version = "0.1.0"
edition = "2021"
private = true

[profile.ephemeral-build]
inherits = "dev"
opt-level = 2
codegen-units = 8
incremental = false
debug = false

[dependencies]

[dev-dependencies]
trybuild = "1.0"
bevy = { version = "0.15.0", default-features = false }
bevy_mod_scripting = { path = "../../", features = ["lua", "lua54"] }
bevy_mod_scripting_lua = { path = "../languages/bevy_mod_scripting_lua" }
bevy_mod_scripting_core = { path = "../bevy_mod_scripting_core" }
